--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MyCovid19 Report</string>
+    <string name="near_the">Near the</string>
     <string-array name="Region">
     <item>Beni Mellal Khenifra</item>
     <item>Casa Settat</item>
